--- a/desafio300em10.ipynb
+++ b/desafio300em10.ipynb
@@ -197,7 +197,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ex - 11: Declare 2 variaveis int e uma terceira variavel para receber o resultado da soma dos dois numeros \n",
+    "\n",
+    "num1 = 52\n",
+    "num2 = 106\n",
+    "soma = num1 + num2\n",
+    "\n",
+    "print(soma)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex - 12: Declare duas variaveis e realize a subtracao delas \n",
+    "\n",
+    "num1 = 52\n",
+    "num2 = 106\n",
+    "\n",
+    "#solucao 1\n",
+    "print (num1 - num2)\n",
+    "\n",
+    "#solucao 2 \n",
+    "subtracao = num1 - num2\n",
+    "\n",
+    "print(subtracao)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex - 13: Realize as operações de multiplicacao e divisao entre duas variaveis \n",
+    "\n",
+    "def multiplica(num1, num2):\n",
+    "  mult = num1 * num2\n",
+    "  return mult\n",
+    "\n",
+    "def divide(num1,num2):\n",
+    "  div = num1/num2\n",
+    "  return div\n",
+    "\n",
+    "mult = multiplica(10,50)\n",
+    "print(mult)\n",
+    "div = divide(50,10)\n",
+    "print(div)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Ex 14 - Eleve o num1 a 8 potencia\n",
+    "\n",
+    "#solucao 1\n",
+    "num1 = 51\n",
+    "print(num1 **8)\n",
+    "\n",
+    "#solucao 2\n",
+    "def potencia(num1):\n",
+    "  pot = num1 **8\n",
+    "  return pot\n"
+   ]
   }
  ],
  "metadata": {
