--- a/desafio300em10.ipynb
+++ b/desafio300em10.ipynb
@@ -267,6 +267,214 @@
     "  pot = num1 **8\n",
     "  return pot\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex 15: O programa recebe dois valores pelo usuario e em seguida as 4 operacoes basicas sao apresentadas na tela \n",
+    "\n",
+    "#solucao 1\n",
+    "num1 = int(input('Digite o primeiro número:'))\n",
+    "num2 = int(input('Digite o segundo número:'))\n",
+    "\n",
+    "print(f'A soma de {num1} com {num2} é: {num1 + num2}')\n",
+    "print(f'A subtração de {num1} com {num2} é: {num1 - num2}')\n",
+    "print(f'A multiplicação de {num1} com {num2} é: {num1 * num2}')\n",
+    "print(f'A divisão de {num1} com {num2} é: {num1 / num2}')\n",
+    "\n",
+    "#solucao 2\n",
+    "def soma(num1,num2):\n",
+    "  adicao = num1 + num2\n",
+    "  return adicao\n",
+    "\n",
+    "def subtracao(num1,num2):\n",
+    "  subtrai = num1 - num2\n",
+    "  return subtrai\n",
+    "\n",
+    "def multiplicacao(num1, num2):\n",
+    "  mult = num1 * num2\n",
+    "  return mult\n",
+    "\n",
+    "def divisao(num1,num2):\n",
+    "  divide = num1/num2\n",
+    "  return divide\n",
+    "\n",
+    "num1 = int(input('\\nDigite o primeiro número:'))\n",
+    "num2 = int(input('Digite o segundo número:'))\n",
+    "\n",
+    "Rsoma = soma(num1, num2)\n",
+    "Rsub = subtracao(num1, num2)\n",
+    "Rmult = multiplicacao(num1, num2)\n",
+    "Rdiv = divisao(num1,num2)\n",
+    "\n",
+    "\n",
+    "print(f'Soma: {Rsoma}')\n",
+    "print(f'Subtração: {Rsub}')\n",
+    "print(f'Multiplicação: {Rmult}')\n",
+    "print(f'Divisão: {Rdiv}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Ex - 16: Verifica se o valor de num2 consta entre os elementos da lista \n",
+    "\n",
+    "#solucao1\n",
+    "\n",
+    "num = 100\n",
+    "lista = [10, 100, 1000, 10000, 100000]\n",
+    "\n",
+    "print(num in lista)\n",
+    "\n",
+    "\n",
+    "#solucao 2 - recebendo o numero do usuário \n",
+    "num1 = int(input('\\nDigite o numero:'))\n",
+    "\n",
+    "print(num1 in lista)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex - 17: O programa ira receber do usuario 2 numeros inteiros e mostrar na tela se os numeros sao iguais ou diferentes, caso sejam diferentes, ira mostrar qual dos dois é maior \n",
+    "\n",
+    "\n",
+    "num1 = int(input('Digite o primeiro número:'))\n",
+    "num2 = int(input ('Digite o segundo número:'))\n",
+    "\n",
+    "if num1 != num2:\n",
+    "  if num1 > num2:\n",
+    "    print('O primeiro número digitado é maior')\n",
+    "  elif num1 < num2:\n",
+    "    print('O segundo número digitado é maior')\n",
+    "else:\n",
+    "  print('Numeros iguais')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex - 18: Receba um valor inteiro do usuário e imprima na tela se o valor digitado é impar ou par \n",
+    "\n",
+    "\n",
+    "num = int(input('Digite um numero: '))\n",
+    "\n",
+    "if num % 2 == 0:\n",
+    "  print('O número digitado é PAR')\n",
+    "\n",
+    "else: \n",
+    "  print('O número digitado é IMPAR')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex - 19: Crie uma variavel com valor inicial 0, enquanto o valor dessa varivel for menor ou igual a 10, exiba o próprio valor da variável. A cada execução a mesma deve ter seu valor atualizado, incrementado em 1 unidade.\n",
+    "\n",
+    "# Como eu pensei em resolver \n",
+    "i = 0\n",
+    "\n",
+    "for i in range(10):\n",
+    "  print(i+1)\n",
+    "\n",
+    "#Proposta do livro \n",
+    "\n",
+    "var = 0\n",
+    "\n",
+    "while var <= 10:\n",
+    "  print(var)\n",
+    "  var = var + 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ex - 20: Crie uma estrtura de repetição que percorre a string 'Nikola Tesla', exibindo em tela letra por letra desse nome:\n",
+    "\n",
+    "for i in 'Nikola Tesla':\n",
+    "  print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Ex 21 - For em lista. Variavel lista recebe 8 elementos e imprime os itens separadamente\n",
+    "\n",
+    "lista = ['Agua', 'Acucar', 'Frutas', 'Iogurte','Sorvete','Chocolate','Macarrao','Molho']\n",
+    "\n",
+    "for i in lista:\n",
+    "  print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ex - 22: Crie um programa que recebe uma variavel inicio e uma variavel fim e exiba em tela a contagem dos numeros desse intervalo\n",
+    "\n",
+    "inicio = int(input('Digite o numero pelo qual se iniciara a contagem: '))\n",
+    "fim = int(input('Digite o numero wue encerrara a contagem:'))\n",
+    "\n",
+    "for i in range(inicio,fim+1):\n",
+    "  print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ex - 23 o programa exibe a contagem entre 2 valores informados como parametro atraves do range(), mostrando apenas os numeros pares\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Exibe os pares de 0 a 20\n",
+    "\n",
+    "for i in range(0,21):\n",
+    "  if i % 2 == 0:\n",
+    "    print(i)\n",
+    "\n",
+    "# Solicita que o usuario informe o intervalo\n",
+    "print('\\n\\n')\n",
+    "inicio = int(input('Digite o numero pelo qual se iniciara a contagem: '))\n",
+    "fim = int(input('Digite o numero wue encerrara a contagem:'))\n",
+    "\n",
+    "for i in range(inicio,fim+1):\n",
+    "  if i % 2 == 0:\n",
+    "    print(i)\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
